--- a/package.json
+++ b/package.json
@@ -11,17 +11,21 @@
     "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix"
   },
   "dependencies": {
+    "@expo/vector-icons": "^15.0.3",
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-navigation/material-top-tabs": "^7.4.11",
     "@react-navigation/native": "^7.1.26",
     "@react-navigation/stack": "^7.6.13",
     "@reduxjs/toolkit": "^2.11.2",
     "axios": "^1.13.2",
     "expo": "~54.0.30",
+    "expo-build-properties": "~1.0.10",
     "expo-file-system": "~19.0.21",
     "expo-font": "~14.0.10",
     "expo-network": "~8.0.8",
     "expo-print": "~15.0.8",
     "expo-router": "~6.0.21",
+    "expo-secure-store": "~15.0.8",
     "expo-sharing": "~14.0.8",
     "expo-splash-screen": "~31.0.13",
     "expo-sqlite": "~16.0.10",
@@ -31,9 +35,11 @@
     "react-dom": "^19.1.0",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "^2.30.0",
+    "react-native-pager-view": "6.9.1",
     "react-native-reanimated": "^4.2.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-vector-icons": "^10.3.0",
     "react-redux": "^9.2.0",
     "redux-persist": "^6.0.0"
   },
