--- a/package.json
+++ b/package.json
@@ -11,13 +11,18 @@
     "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix"
   },
   "dependencies": {
+    "@expo-google-fonts/inter": "^0.4.2",
     "@expo/vector-icons": "^15.0.3",
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-community/netinfo": "^11.4.1",
     "@react-navigation/material-top-tabs": "^7.4.11",
     "@react-navigation/native": "^7.1.26",
     "@react-navigation/stack": "^7.6.13",
     "@reduxjs/toolkit": "^2.11.2",
+    "@types/lodash": "^4.17.21",
     "axios": "^1.13.2",
+    "axios-retry": "^4.5.0",
+    "date-fns": "^4.1.0",
     "expo": "~54.0.30",
     "expo-build-properties": "~1.0.10",
     "expo-file-system": "~19.0.21",
@@ -31,6 +36,7 @@
     "expo-sqlite": "~16.0.10",
     "expo-status-bar": "~3.0.9",
     "firebase": "^12.7.0",
+    "lodash": "^4.17.21",
     "react": "19.1.0",
     "react-dom": "^19.1.0",
     "react-native": "0.81.5",
@@ -39,6 +45,7 @@
     "react-native-reanimated": "^4.2.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-uuid": "^2.0.3",
     "react-native-vector-icons": "^10.3.0",
     "react-redux": "^9.2.0",
     "redux-persist": "^6.0.0"
