--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@expo/vector-icons": "^15.0.3",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/netinfo": "^11.4.1",
+    "@react-native-firebase/app": "^23.7.0",
+    "@react-native-firebase/auth": "^23.7.0",
     "@react-navigation/material-top-tabs": "^7.4.11",
     "@react-navigation/native": "^7.1.26",
     "@react-navigation/stack": "^7.6.13",
@@ -37,6 +39,7 @@
     "expo-status-bar": "~3.0.9",
     "firebase": "^12.7.0",
     "lodash": "^4.17.21",
+    "lottie-react-native": "~7.3.1",
     "react": "19.1.0",
     "react-dom": "^19.1.0",
     "react-native": "0.81.5",
