--- a/package.json
+++ b/package.json
@@ -46,11 +46,13 @@
     "react-native": "0.81.5",
     "react-native-gesture-handler": "^2.30.0",
     "react-native-pager-view": "6.9.1",
+    "react-native-paper": "^5.14.5",
     "react-native-reanimated": "^4.2.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-uuid": "^2.0.3",
     "react-native-vector-icons": "^10.3.0",
+    "react-native-worklets": "^0.7.1",
     "react-redux": "^9.2.0",
     "redux-persist": "^6.0.0"
   },
