--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-native-community/slider": "5.0.1",
     "@react-native-firebase/app": "^23.7.0",
     "@react-native-firebase/auth": "^23.7.0",
+    "@react-navigation/drawer": "^7.7.10",
     "@react-navigation/material-top-tabs": "^7.4.11",
     "@react-navigation/native": "^7.1.26",
     "@react-navigation/stack": "^7.6.13",
@@ -26,7 +27,7 @@
     "axios": "^1.13.2",
     "axios-retry": "^4.5.0",
     "date-fns": "^4.1.0",
-    "expo": "~54.0.30",
+    "expo": "~54.0.31",
     "expo-build-properties": "~1.0.10",
     "expo-file-system": "~19.0.21",
     "expo-font": "~14.0.10",
@@ -44,15 +45,15 @@
     "react": "19.1.0",
     "react-dom": "^19.1.0",
     "react-native": "0.81.5",
-    "react-native-gesture-handler": "^2.30.0",
+    "react-native-gesture-handler": "~2.28.0",
     "react-native-pager-view": "6.9.1",
     "react-native-paper": "^5.14.5",
-    "react-native-reanimated": "^4.2.1",
+    "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-uuid": "^2.0.3",
     "react-native-vector-icons": "^10.3.0",
-    "react-native-worklets": "^0.7.1",
+    "react-native-worklets": "~0.5.1",
     "react-redux": "^9.2.0",
     "redux-persist": "^6.0.0"
   },
@@ -60,6 +61,7 @@
     "@types/react": "~19.1.0",
     "@typescript-eslint/eslint-plugin": "^8.51.0",
     "@typescript-eslint/parser": "^8.51.0",
+    "babel-preset-expo": "~54.0.9",
     "eslint": "^8.57.1",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^7.0.1",
