--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-native-community/slider": "5.0.1",
     "@react-native-firebase/app": "^23.7.0",
     "@react-native-firebase/auth": "^23.7.0",
+    "@react-native-picker/picker": "^2.11.4",
     "@react-navigation/drawer": "^7.7.10",
     "@react-navigation/material-top-tabs": "^7.4.11",
     "@react-navigation/native": "^7.1.26",
@@ -45,6 +46,7 @@
     "react": "19.1.0",
     "react-dom": "^19.1.0",
     "react-native": "0.81.5",
+    "react-native-big-list": "^1.6.4",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-pager-view": "6.9.1",
     "react-native-paper": "^5.14.5",
