--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "expo-file-system": "~19.0.21",
     "expo-font": "~14.0.10",
     "expo-network": "~8.0.8",
+    "expo-notifications": "^0.32.16",
     "expo-print": "~15.0.8",
     "expo-router": "~6.0.21",
     "expo-secure-store": "~15.0.8",
