--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "axios-retry": "^4.5.0",
     "date-fns": "^4.1.0",
     "expo": "~54.0.31",
+    "expo-background-fetch": "^14.0.9",
     "expo-build-properties": "~1.0.10",
     "expo-file-system": "~19.0.21",
     "expo-font": "~14.0.10",
@@ -41,6 +42,7 @@
     "expo-splash-screen": "~31.0.13",
     "expo-sqlite": "~16.0.10",
     "expo-status-bar": "~3.0.9",
+    "expo-task-manager": "^14.0.9",
     "firebase": "^12.7.0",
     "lodash": "^4.17.21",
     "lottie-react-native": "~7.3.1",
