--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@expo-google-fonts/inter": "^0.4.2",
     "@expo/vector-icons": "^15.0.3",
+    "@mhpdev/react-native-speech": "^1.3.1",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/netinfo": "^11.4.1",
     "@react-native-community/slider": "5.0.1",
@@ -33,12 +34,14 @@
     "expo-build-properties": "~1.0.10",
     "expo-file-system": "~19.0.21",
     "expo-font": "~14.0.10",
+    "expo-localization": "^17.0.8",
     "expo-network": "~8.0.8",
     "expo-notifications": "^0.32.16",
     "expo-print": "~15.0.8",
     "expo-router": "~6.0.21",
     "expo-secure-store": "~15.0.8",
     "expo-sharing": "~14.0.8",
+    "expo-speech": "^14.0.8",
     "expo-splash-screen": "~31.0.13",
     "expo-sqlite": "~16.0.10",
     "expo-status-bar": "~3.0.9",
@@ -47,7 +50,6 @@
     "lodash": "^4.17.21",
     "lottie-react-native": "~7.3.1",
     "react": "19.1.0",
-    "react-dom": "^19.1.0",
     "react-native": "0.81.5",
     "react-native-big-list": "^1.6.4",
     "react-native-gesture-handler": "~2.28.0",
