--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,10 @@ expo-env.d.ts
 *.key
 *.mobileprovision
 
+# Firebase configuration files
+google-services.json
+GoogleService-Info.plist
+
 # Metro
 .metro-health-check*
 
