--- a/app.json
+++ b/app.json
@@ -14,6 +14,7 @@
     },
     "ios": {
       "supportsTablet": true,
+      "googleServicesFile": "./GoogleService-Info.plist",
       "infoPlist": {
         "NSSpeechRecognitionUsageDescription": "This app uses speech recognition to read your stories aloud.",
         "NSSpeechSynthesisUsageDescription": "This app uses text-to-speech to read your stories aloud."
@@ -24,6 +25,7 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
+      "googleServicesFile": "./google-services.json",
       "edgeToEdgeEnabled": true,
       "package": "com.boaz606.storyteller",
       "predictiveBackGestureEnabled": false,
