--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "lodash": "^4.17.21",
     "lottie-react-native": "~7.3.1",
     "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-native": "0.81.5",
     "react-native-big-list": "^1.6.4",
     "react-native-gesture-handler": "~2.28.0",
