--- a/eas.json
+++ b/eas.json
@@ -6,13 +6,25 @@
   "build": {
     "development": {
       "developmentClient": true,
-      "distribution": "internal"
+      "distribution": "internal",
+      "env": {
+        "GOOGLE_SERVICES_JSON": "${GOOGLE_SERVICES_JSON}",
+        "GOOGLE_SERVICE_INFO_PLIST": "${GOOGLE_SERVICE_INFO_PLIST}"
+      }
     },
     "preview": {
-      "distribution": "internal"
+      "distribution": "internal",
+      "env": {
+        "GOOGLE_SERVICES_JSON": "${GOOGLE_SERVICES_JSON}",
+        "GOOGLE_SERVICE_INFO_PLIST": "${GOOGLE_SERVICE_INFO_PLIST}"
+      }
     },
     "production": {
-      "autoIncrement": true
+      "autoIncrement": true,
+      "env": {
+        "GOOGLE_SERVICES_JSON": "${GOOGLE_SERVICES_JSON}",
+        "GOOGLE_SERVICE_INFO_PLIST": "${GOOGLE_SERVICE_INFO_PLIST}"
+      }
     }
   },
   "submit": {
