--- a/app.json
+++ b/app.json
@@ -16,9 +16,11 @@
       "supportsTablet": true,
       "googleServicesFile": "./GoogleService-Info.plist",
       "infoPlist": {
+        "NSMicrophoneUsageDescription": "This app uses the microphone for audio interactions.",
         "NSSpeechRecognitionUsageDescription": "This app uses speech recognition to read your stories aloud.",
         "NSSpeechSynthesisUsageDescription": "This app uses text-to-speech to read your stories aloud."
-      }
+      },
+      "bundleIdentifier": "com.boaz606.storyteller"
     },
     "android": {
       "adaptiveIcon": {
@@ -31,7 +33,11 @@
       "predictiveBackGestureEnabled": false,
       "permissions": [
         "android.permission.RECEIVE_BOOT_COMPLETED",
-        "android.permission.WAKE_LOCK"
+        "android.permission.WAKE_LOCK",
+        "android.permission.RECORD_AUDIO",
+        "android.permission.ACCESS_NETWORK_STATE",
+        "android.permission.INTERNET",
+        "android.permission.MODIFY_AUDIO_SETTINGS"
       ]
     },
     "web": {
@@ -60,12 +66,15 @@
             "startOnBoot": true
           }
         }
-      ]
+      ],
+      "@livekit/react-native-expo-plugin",
+      "@config-plugins/react-native-webrtc"
     ],
     "extra": {
       "firebaseAPIKey": "${FIREBASE_API_KEY}",
       "firebaseProjectId": "${FIREBASE_PROJECT_ID}",
       "claudeAPIKey": "${CLAUDE_API_KEY}",
+      "elevenlabsApiKey": "${EXPO_PUBLIC_ELEVENLABS_API_KEY}",
       "router": {},
       "eas": {
         "projectId": "10c8468b-a73d-43b5-827b-8838626041b2"
