--- a/package.json
+++ b/package.json
@@ -11,8 +11,13 @@
     "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix"
   },
   "dependencies": {
+    "@config-plugins/react-native-webrtc": "^13.0.0",
+    "@elevenlabs/react-native": "^0.5.7",
     "@expo-google-fonts/inter": "^0.4.2",
     "@expo/vector-icons": "^15.0.3",
+    "@livekit/react-native": "^2.9.6",
+    "@livekit/react-native-expo-plugin": "^1.0.1",
+    "@livekit/react-native-webrtc": "^137.0.2",
     "@mhpdev/react-native-speech": "^1.3.1",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/netinfo": "^11.4.1",
@@ -30,6 +35,7 @@
     "axios-retry": "^4.5.0",
     "date-fns": "^4.1.0",
     "expo": "~54.0.31",
+    "expo-av": "^16.0.8",
     "expo-background-fetch": "^14.0.9",
     "expo-build-properties": "~1.0.10",
     "expo-file-system": "~19.0.21",
@@ -41,12 +47,12 @@
     "expo-router": "~6.0.21",
     "expo-secure-store": "~15.0.8",
     "expo-sharing": "~14.0.8",
-    "expo-speech": "^14.0.8",
     "expo-splash-screen": "~31.0.13",
     "expo-sqlite": "~16.0.10",
     "expo-status-bar": "~3.0.9",
     "expo-task-manager": "^14.0.9",
     "firebase": "^12.7.0",
+    "livekit-client": "^2.16.1",
     "lodash": "^4.17.21",
     "lottie-react-native": "~7.3.1",
     "react": "19.1.0",
