--- a/eas.json
+++ b/eas.json
@@ -6,25 +6,13 @@
   "build": {
     "development": {
       "developmentClient": true,
-      "distribution": "internal",
-      "env": {
-        "GOOGLE_SERVICES_JSON": "${GOOGLE_SERVICES_JSON}",
-        "GOOGLE_SERVICE_INFO_PLIST": "${GOOGLE_SERVICE_INFO_PLIST}"
-      }
+      "distribution": "internal"
     },
     "preview": {
-      "distribution": "internal",
-      "env": {
-        "GOOGLE_SERVICES_JSON": "${GOOGLE_SERVICES_JSON}",
-        "GOOGLE_SERVICE_INFO_PLIST": "${GOOGLE_SERVICE_INFO_PLIST}"
-      }
+      "distribution": "internal"
     },
     "production": {
-      "autoIncrement": true,
-      "env": {
-        "GOOGLE_SERVICES_JSON": "${GOOGLE_SERVICES_JSON}",
-        "GOOGLE_SERVICE_INFO_PLIST": "${GOOGLE_SERVICE_INFO_PLIST}"
-      }
+      "autoIncrement": true
     }
   },
   "submit": {
