--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix"
   },
   "dependencies": {
+    "@config-plugins/react-native-webrtc": "^13.0.0",
     "@expo-google-fonts/inter": "^0.4.2",
     "@expo/vector-icons": "^15.0.3",
+    "@livekit/react-native-expo-plugin": "^1.0.1",
     "@mhpdev/react-native-speech": "^1.3.1",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/netinfo": "^11.4.1",
@@ -29,6 +31,7 @@
     "axios": "^1.13.2",
     "axios-retry": "^4.5.0",
     "date-fns": "^4.1.0",
+    "dotenv": "^17.2.3",
     "expo": "~54.0.31",
     "expo-background-fetch": "^14.0.9",
     "expo-build-properties": "~1.0.10",
