--- a/eas.json
+++ b/eas.json
@@ -6,13 +6,46 @@
   "build": {
     "development": {
       "developmentClient": true,
-      "distribution": "internal"
+      "distribution": "internal",
+      "env": {
+        "FIREBASE_API_KEY": "$FIREBASE_API_KEY",
+        "FIREBASE_PROJECT_ID": "$FIREBASE_PROJECT_ID",
+        "FIREBASE_AUTH_DOMAIN": "$API_SECRET_KEY",
+        "FIREBASE_STORAGE_BUCKET": "$FIREBASE_STORAGE_BUCKET",
+        "FIREBASE_ANDROID_APP_ID": "$FIREBASE_ANDROID_APP_ID",
+        "FIREBASE_IOS_APP_ID": "$FIREBASE_IOS_APP_ID",
+        "ELEVENLABS_API_KEY": "$ELEVENLABS_API_KEY",
+        "CLAUDE_API_KEY": "$CLAUDE_API_KEY",
+        "APP_ENV": "development"
+      }
     },
     "preview": {
-      "distribution": "internal"
+      "distribution": "internal",
+      "env": {
+        "FIREBASE_API_KEY": "$FIREBASE_API_KEY",
+        "FIREBASE_PROJECT_ID": "$FIREBASE_PROJECT_ID",
+        "FIREBASE_AUTH_DOMAIN": "$API_SECRET_KEY",
+        "FIREBASE_STORAGE_BUCKET": "$FIREBASE_STORAGE_BUCKET",
+        "FIREBASE_ANDROID_APP_ID": "$FIREBASE_ANDROID_APP_ID",
+        "FIREBASE_IOS_APP_ID": "$FIREBASE_IOS_APP_ID",
+        "ELEVENLABS_API_KEY": "$ELEVENLABS_API_KEY",
+        "CLAUDE_API_KEY": "$CLAUDE_API_KEY",
+        "APP_ENV": "preview"
+      }
     },
     "production": {
-      "autoIncrement": true
+      "autoIncrement": true,
+      "env": {
+        "FIREBASE_API_KEY": "$FIREBASE_API_KEY",
+        "FIREBASE_PROJECT_ID": "$FIREBASE_PROJECT_ID",
+        "FIREBASE_AUTH_DOMAIN": "$API_SECRET_KEY",
+        "FIREBASE_STORAGE_BUCKET": "$FIREBASE_STORAGE_BUCKET",
+        "FIREBASE_ANDROID_APP_ID": "$FIREBASE_ANDROID_APP_ID",
+        "FIREBASE_IOS_APP_ID": "$FIREBASE_IOS_APP_ID",
+        "ELEVENLABS_API_KEY": "$ELEVENLABS_API_KEY",
+        "CLAUDE_API_KEY": "$CLAUDE_API_KEY",
+        "APP_ENV": "production"
+      }
     }
   },
   "submit": {
