--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@react-native-community/slider": "5.0.1",
     "@react-native-firebase/app": "^23.7.0",
     "@react-native-firebase/auth": "^23.7.0",
-    "@react-native-picker/picker": "^2.11.4",
+    "@react-native-picker/picker": "2.11.1",
     "@react-navigation/drawer": "^7.7.10",
     "@react-navigation/material-top-tabs": "^7.4.11",
     "@react-navigation/native": "^7.1.26",
@@ -64,7 +64,7 @@
     "react-native-screens": "~4.16.0",
     "react-native-uuid": "^2.0.3",
     "react-native-vector-icons": "^10.3.0",
-    "react-native-worklets": "~0.5.1",
+    "react-native-worklets": "f0.5.1",
     "react-redux": "^9.2.0",
     "redux-persist": "^6.0.0"
   },
