--- a/eas.json
+++ b/eas.json
@@ -10,7 +10,7 @@
       "env": {
         "FIREBASE_API_KEY": "$FIREBASE_API_KEY",
         "FIREBASE_PROJECT_ID": "$FIREBASE_PROJECT_ID",
-        "FIREBASE_AUTH_DOMAIN": "$API_SECRET_KEY",
+        "FIREBASE_AUTH_DOMAIN": "$FIREBASE_AUTH_DOMAIN",
         "FIREBASE_STORAGE_BUCKET": "$FIREBASE_STORAGE_BUCKET",
         "FIREBASE_ANDROID_APP_ID": "$FIREBASE_ANDROID_APP_ID",
         "FIREBASE_IOS_APP_ID": "$FIREBASE_IOS_APP_ID",
@@ -24,7 +24,7 @@
       "env": {
         "FIREBASE_API_KEY": "$FIREBASE_API_KEY",
         "FIREBASE_PROJECT_ID": "$FIREBASE_PROJECT_ID",
-        "FIREBASE_AUTH_DOMAIN": "$API_SECRET_KEY",
+        "FIREBASE_AUTH_DOMAIN": "$FIREBASE_AUTH_DOMAIN",
         "FIREBASE_STORAGE_BUCKET": "$FIREBASE_STORAGE_BUCKET",
         "FIREBASE_ANDROID_APP_ID": "$FIREBASE_ANDROID_APP_ID",
         "FIREBASE_IOS_APP_ID": "$FIREBASE_IOS_APP_ID",
@@ -38,7 +38,7 @@
       "env": {
         "FIREBASE_API_KEY": "$FIREBASE_API_KEY",
         "FIREBASE_PROJECT_ID": "$FIREBASE_PROJECT_ID",
-        "FIREBASE_AUTH_DOMAIN": "$API_SECRET_KEY",
+        "FIREBASE_AUTH_DOMAIN": "$FIREBASE_AUTH_DOMAIN",
         "FIREBASE_STORAGE_BUCKET": "$FIREBASE_STORAGE_BUCKET",
         "FIREBASE_ANDROID_APP_ID": "$FIREBASE_ANDROID_APP_ID",
         "FIREBASE_IOS_APP_ID": "$FIREBASE_IOS_APP_ID",
